--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.5.2-1) unstable; urgency=low
+
+  * Add build-depend-indep to control
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon,  5 May 2003 09:13:12 -0600
+
 cl-sql (1.5.1-1) unstable; urgency=low
 
   * Fix for aodbc driver
