--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.5.3-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon,  5 May 2003 20:22:40 -0600
+
 cl-sql (1.5.2-1) unstable; urgency=low
 
   * Add build-depend-indep to control
