--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.5.4-1) unstable; urgency=low
+
+  * Improve .asd files
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue,  6 May 2003 18:30:19 -0600
+
 cl-sql (1.5.3-1) unstable; urgency=low
 
   * New upstream
