--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cl-sql (1.6.0-1) unstable; urgency=low
+
+  * Optimize string conversion for mysql string fields at the expense
+  of ignoring locales on Allegro and Lispworks.
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 15 May 2003 01:32:52 -0600
+
 cl-sql (1.5.4-1) unstable; urgency=low
 
   * Improve .asd files
