--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.6.1-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 16 May 2003 01:59:00 -0600
+
 cl-sql (1.6.0-1) unstable; urgency=low
 
   * Optimize native string conversion at the expense
