--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.6.2-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sat, 17 May 2003 01:43:22 -0600
+
 cl-sql (1.6.1-1) unstable; urgency=low
 
   * New upstream
