--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.6.2-2) unstable; urgency=low
+
+  * Fix dependencies for clsql-postgresql and clsql-postgresql-socket
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 21 May 2003 10:13:43 -0600
+
 cl-sql (1.6.2-1) unstable; urgency=low
 
   * New upstream
