r5021: Automatic commit for debian_version_1_6_4-1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.6.4-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 22 May 2003 09:42:33 -0600
+
 cl-sql (1.6.3-1) unstable; urgency=low
 
   * New upstream
