--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.6.6-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 23 Jun 2003 13:25:01 -0600
+
 cl-sql (1.6.5-1) unstable; urgency=low
 
   * New upstream
