--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.7.0-1) unstable; urgency=low
+
+  * Update acl-compat-tester with ptester
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sun, 20 Jul 2003 12:12:36 -0600
+
 cl-sql (1.6.6-1) unstable; urgency=low
 
   * New upstream
