--- a/tests/README
+++ b/tests/README
@@ -1,10 +1,14 @@
 These tests require the setup of a configuration file with account
-information for MySQL and PostgreSQL SQL servers. Additionally,
-the Debian package acl-installer must be installed and a license downloaded
-to use the AODBC tests.
+information for MySQL and PostgreSQL SQL servers. Additionally, the
+Debian package acl-installer must be installed and a license
+downloaded to use the AODBC tests.
 
-This test suite looks for a configuration file named ".clsql-test.config"
-located in the users home directory.
+Furthermore, if you are not using the Debian package of CLSQL, these
+tests require the downloading of the rtest and ptester packages from
+http://files.b9.com/.
+
+This test suite looks for a configuration file named
+".clsql-test.config" located in the users home directory.
 
 This file contains a single a-list that specifies the connection
  specs for each database type to be tested. For example, to test all
