--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.7.1-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 21 Jul 2003 05:18:15 -0600
+
 cl-sql (1.7.0-1) unstable; urgency=low
 
   * Update acl-compat-tester with ptester
