--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+23 Jul 2003 Kevin Rosenberg (kevin@rosenberg.net)
+	* Add for-each-row macro
+
 12 Dec 2002 Kevin Rosenberg (kevin@rosenberg.net)
 	* uffi/clsql-uffi.lisp: return NIL for numeric fields that are NULL
 	
