--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.7.2-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 23 Jul 2003 12:59:46 -0600
+
 cl-sql (1.7.1-1) unstable; urgency=low
 
   * New upstream
