--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.7.6-1) unstable; urgency=low
+
+  * Fix connection string (closes: 208610)
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu,  4 Sep 2003 15:03:53 -0600
+
 cl-sql (1.7.5-1) unstable; urgency=low
 
   * Another fix for previous bug (closes: 207813)
