--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.7.7-1) unstable; urgency=low
+
+  * Fix dependency for allegro-cl-trial for clsql-tests
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 22 Sep 2003 12:18:18 -0600
+
 cl-sql (1.7.6-1) unstable; urgency=low
 
   * Fix connection string (closes: 208610)
