--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+cl-sql (1.7.9-1) unstable; urgency=low
+
+  * Add missing documentation file
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue, 11 Nov 2003 05:30:23 -0700
+
+cl-sql (1.7.8-1) unstable; urgency=low
+
+  * Convert documentation to XML format
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue, 11 Nov 2003 01:20:20 -0700
+
 cl-sql (1.7.7-1) unstable; urgency=low
 
   * Fix dependency for allegro-cl-trial for clsql-tests
