--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.8.0-1) unstable; urgency=low
+
+  * Make asdf-installable
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue, 11 Nov 2003 08:06:28 -0700
+
 cl-sql (1.7.9-1) unstable; urgency=low
 
   * Add missing documentation file
