--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cl-sql (1.8.4-1) unstable; urgency=low
+
+  * Fix typo in error string
+  * Documentation updates
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sat, 15 Nov 2003 10:23:16 -0700
+
 cl-sql (1.8.3-1) unstable; urgency=low
 
   * More documentation, darwin changes
