--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.8.5-1) unstable; urgency=low
+
+  * Fix loading on db-mysql/mysql.so on non-linux platforms
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 24 Nov 2003 23:17:25 -0700
+
 cl-sql (1.8.4-1) unstable; urgency=low
 
   * Fix typo in error string
