--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+10 Mar 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Integrate patch from Aurelio Bignoli for SQLite backend
+
 11 Nov 2003 Kevin Rosenberg (kevin@rosenberg.net)
 	* Converted documentation to XML format
 	* Made package installable with asdf-install
