--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.9.0-1) unstable; urgency=low
+
+  * Add SQLlite backend as contributed by Aurelio Bignoli
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 10 Mar 2004 15:19:46 -0700
+
 cl-sql (1.8.7-1) unstable; urgency=low
 
   * New upstream
