--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.9.0-2) unstable; urgency=low
+
+  * Add cl-sql-sqlite binary package
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 10 Mar 2004 16:07:03 -0700
+
 cl-sql (1.9.0-1) unstable; urgency=low
 
   * Add SQLlite backend as contributed by Aurelio Bignoli
