--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (1.9.1-1) unstable; urgency=low
+
+  * Add better support for mysql v4
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 31 Mar 2004 16:48:30 -0700
+
 cl-sql (1.9.0-2) unstable; urgency=low
 
   * Add cl-sql-sqlite binary package
