--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.0.0-1) unstable; urgency=low
+
+  * New upstream, integrating patch from Marcus Pearce
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri,  2 Apr 2004 13:34:35 -0700
+
 cl-sql (1.9.2-1) unstable; urgency=low
 
   * Automatically detect mysql version
