--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.1.0-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon,  5 Apr 2004 14:30:41 -0600
+
 cl-sql (2.0.0-2) unstable; urgency=low
 
   * Change from libmysqlclient10 to libmysqlclient
