--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,18 @@
+cl-sql (2.2.0-1) unstable; urgency=low
+
+  * Rewrote usql-tutorial.txt to usql.xml and integrated with CLSQL
+  documents.
+  * CLSQL and CLSQL-USQL can be loaded and imported into the same
+  package.
+  * Add CLSQL-USQL binary package
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue,  6 Apr 2004 09:35:28 -0600
+
 cl-sql (2.1.4-1) unstable; urgency=low
 
   * New upstream
 
- -- Kevin M. Rosenberg <kmr@debian.org>  Tue,  6 Apr 2004 07:40:36 -0600
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue,  6 Apr 2004 09:34:32 -0600
 
 cl-sql (2.0.0-2) unstable; urgency=low
 
