--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,2 @@
-CLSQL now supports SBCL, OpenMCL, and SCL.
-
-CLSQL now supports locking on connection pools.
-
-
+CLSQL now supports the CommonSQL-API with the merge of the orphaned
+UncommonSQL package.
