--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,6 @@
 cl-sql (2.2.0-1) unstable; urgency=low
 
-  * Rewrote usql-tutorial.txt to usql.xml and integrated with CLSQL
-  documents.
-  * CLSQL and CLSQL-USQL can be loaded and imported into the same
-  package.
-  * Add CLSQL-USQL binary package
+  * Integrate uncommonsql package code.
 
  -- Kevin M. Rosenberg <kmr@debian.org>  Tue,  6 Apr 2004 09:35:28 -0600
 
