--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 06 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* With for Marcus Pearce's excellent work, I've merged
-	his clsql-usql port into clsql. 
+	his clsql-usql port into clsql. The original clsql
+	interface is available in the clsql-classic package.
 
 02 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Integrate patch from Marcus Pearce <ek735@soi.city.ac.uk>
