--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.3.1-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed,  7 Apr 2004 12:34:23 -0600
+
 cl-sql (2.3.0-1) unstable; urgency=low
 
   * Integrate the clsql-usql package.
