--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.3.2-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed,  7 Apr 2004 13:35:01 -0600
+
 cl-sql (2.3.1-1) unstable; urgency=low
 
   * New upstream
