--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 08 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
-	* Version 2.3.4 released
+	* Version 2.4.0 released: All tests for clsql-classic now finish
+	correctly on Allegro, Lispworks, CMUCL, SBCL, OpenMCL for
+	mysql and postgresql backends. postgresql-socket backend
+	passes all tests for Allegro, Lispworks, CMUCL, and SBCL.
 	* db-mysql/mysql-sql.lisp: Fix array dereferencing
 	* classic-tests/tests.lisp: Fix package name of
 	number-to-sql-string. 
 	* clsql.asd/clsql-tests.asd: Add support for asdf:test-op
-	* Finish renaming of :types keyword to :result-types for
+	* db-sqlite/sqlite-api-uffi.lisp: Fix type UFFI usage
+	found by testing on OpenMCL
+	* db-postgresql-socket/postgresql-socket-api.list: Ported to 
+	SBCL
+	* multiple: Finish renaming of :types keyword to :result-types for
 	greater CommonSQL compatibility, including documentation
 	* sql/basic-cmds.lisp: Remove obsolete file
-	* All tests for clsql-classic now finish correctly on
-	Allegro, Lispworks, CMUCL, SBCL
 	
 08 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.3.3 released
