--- a/ChangeLog
+++ b/ChangeLog
@@ -19,11 +19,13 @@
 	* Fixes for sequences on mysql and sqlite [Marcus Pearce]
 	* Fixes for uffi sqlite backend [Aurelio Bignoli / Kevin Rosenberg]
 	* Fix for schema table [Marcus Pearce]
-	* Add loop extension support for SBCL [Marcus Pearce]
+	* Add loop extension support for SBCL and OpenMCL [Marcus Pearce]
+	* Fixes to test suite [Marcus Pearce]
 
 06 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
         * db-*/*-sql.lisp: Ensure that expr in
 	database-query-result-set is a string
+	* Documentation integration
 	
 06 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* With for Marcus Pearce's excellent work, I've merged
