r8910: rework so that tests are automatically run for multiple backends

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+10 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.5.1 released:
+	tests/*.lisp: Rework so tests are run
+	on multiple backends automatically based
+	on the contents of ~/.clsql-tests.config
+	
 09 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
         * Version 2.5.0 released:
 	All tests for CLSQL and CLSQL-CLASSIC pass
