--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.6.0-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sat, 10 Apr 2004 19:38:06 -0600
+
 cl-sql (2.5.2-1) unstable; urgency=low
 
   * New upstream
