--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.6.3-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sun, 11 Apr 2004 06:48:28 -0600
+
 cl-sql (2.6.2-1) unstable; urgency=low
 
   * New upstream
