--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.6.6-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 12 Apr 2004 11:57:14 -0600
+
 cl-sql (2.6.5-1) unstable; urgency=low
 
   * New upstream
