--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.6.8-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 12 Apr 2004 14:44:01 -0600
+
 cl-sql (2.6.7-1) unstable; urgency=low
 
   * New upstream
