--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 12 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.6.9
+	* base/package.lisp: Add missing symbols [Marcus Pearce]
+
+12 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.6.8
 	* test/test-fddl.lisp: Cleanup fix [Marcus Pearce]
 	* utils/time.lisp: Multiple fixes [Marcus Pearce]
