--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 12 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.6.10
+	* db-aodbc: Add methods for generic functions, some are
+	not yet implemented.
+
+12 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.6.9
 	* base/package.lisp: Add missing symbols [Marcus Pearce]
 
