--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 	* Version 2.6.10
 	* db-aodbc: Add methods for generic functions, some are
 	not yet implemented.
+	* clsql-odbc.asd, db-obcl/*.lisp: Initial start of ODBC
+	support
 
 12 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.6.9
