--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,12 @@
 12 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.6.11
+	* db-odbc: Add mid-level [DBI] layer
+	
+12 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.6.10
 	* db-aodbc: Add methods for generic functions, some are
 	not yet implemented.
-	* clsql-odbc.asd, db-obcl/*.lisp: Initial start of ODBC
+	* clsql-odbc.asd, db-odbc/*.lisp: Initial start of ODBC
 	support
 
 12 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
