--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 	* Version 2.6.12
 	* base/transactions.lisp: Add quote for macro
 	expansion of WITH-TRANSACTIONS [Time Howe]
+	* db-sqlite/sqlite-sql.lisp: Support memory database
+	in database-probe [Ng Pheng Siong]
 
 12 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.6.11
