--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 13 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.6.13
+	* db-odbc/*.lisp: Further porting.
+	Very alpha code! But, basic query is now working.
+
+13 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.6.12
 	* base/transactions.lisp: Add quote for macro
 	expansion of WITH-TRANSACTIONS [Time Howe]
