--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+14 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.6.14.
+	* base/utils.lisp: Add process functions
+	* base/package.lisp: Export utils to CLSQL-BASE-SYS
+	* db-aodbc: implement sequence functions
+	* db-mysql/mysql-sql.lisp: Use WITHOUT-INTERRUPTS
+	for SEQUENCE-NEXT
+	
 13 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.6.13. Requires UFFI version 1.4.9
 	* db-odbc/*.lisp: Further porting.
