--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 15 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.7.0: New backend: ODBC. Tests as
-	well as AODBC backend. Requires UFFI v1.4.10
+	well as AODBC backend on Allegro,Lispworks.
+	SBCL and CMUCL don't work quite yet.  Requires UFFI v1.4.11+
 	* db-odbc/*.lisp: Add ODBC3 function SQLSetEnvAttr
 	to explicitly set ODBC2 support. Add BIGINT support.
 	Add result-types support. Added SQLTables.
