--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 15 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.7.2: Fix ODBC on Lispworks Windows
+
+15 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.7.1: Fix for new ODBC backend.
 	clsql-odbc now works on SBCL, CMUCL, OpenMCL
 	in addition to AllegroCL and Lispworks.
