--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
-cl-sql (2.7.2-1) unstable; urgency=low
+cl-sql (2.7.3-1) unstable; urgency=low
 
   * New upstream
+  * Change depends (closes:243977)
+  * Add new backend
 
  -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 15 Apr 2004 17:13:52 -0600
 
