--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+16 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.7.3: Implement RECONNECT
+
 15 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.7.2: Fix ODBC on Lispworks Windows
 
