r9042: Automated commit for Debian build of clsql upstream-version-2.7.5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 16 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.7.5
+	* base/basic-sql.lisp: Fix FLATP in QUERY
+
+16 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.7.3: Implement RECONNECT
 
 15 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
