--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.7.5-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sat, 17 Apr 2004 11:47:40 -0600
+
 cl-sql (2.7.4-1) unstable; urgency=low
 
   * New upstream
