r9050: Automated commit for Debian build of clsql upstream-version-2.7.6

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 16 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.7.6
+	* base/objects.lisp, base/classes.lisp: Patch
+	for db-kind from Eduardo Munoz
+	
+16 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.7.5
 	* base/basic-sql.lisp: Fix FLATP in QUERY
 
