--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
-16 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
+18 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.7.7
+	* doc/csql.xml, examples/clsql-tutorial.lisp: Patch for db-kind
+	from Eduardo Munoz.
+	
+17 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.7.6
 	* base/objects.lisp, base/classes.lisp: Patch
 	for db-kind from Eduardo Munoz
