--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.7.8-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sun, 18 Apr 2004 13:42:20 -0600
+
 cl-sql (2.7.7-1) unstable; urgency=low
 
   * New upstream
