--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+19 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.7.10
+	* base/utils.lisp: Fix command-output on CMUCL/SBCL
+
 18 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.7.9
 	* db-sqlite/sqlite-sql.lisp: Fix sequence functions.
