--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.8.2-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 19 Apr 2004 13:02:01 -0600
+
 cl-sql (2.8.1-1) unstable; urgency=low
 
   * New upstream
