--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.8.3: Fix regression test
+
 19 Apr 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.8.2: Build changes for FreeBSD [Slawek Zak]
 
