--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.8.3-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue, 20 Apr 2004 09:40:20 -0600
+
 cl-sql (2.8.2-1) unstable; urgency=low
 
   * New upstream
